--- a/app/static/views/yara_rule/yara_rules.html
+++ b/app/static/views/yara_rule/yara_rules.html
@@ -436,11 +436,21 @@
                                             ng-if="f.date_modified"
                                             style="font-size: 0.8em;">({{ pretty_date(f.date_modified) }} by {{ f.user.email }})</span>
                                         <div class="pull-right">
-                                            <div><a title="Search VirusTotal"
+
+						<a title="Delete File" ng-confirm-click="Are you sure you want to delete this attached file?"
+			     href="ThreatKB/files/delete/{{ f.entity_type }}/{{ f.entity_id }}/{{ f.id }}">
+
+                                                    <span class="glyphicon glyphicon-remove-circle"></span>
+   					        </a>
+						&nbsp;
+    
+						    <a title="Search VirusTotal"
                                                     href="https://www.virustotal.com/#/file/{{ f.sha256 }}/detection"
                                                     target="_blank"><span
                                                     class="glyphicon glyphicon-certificate"></span></a>
                                                 &nbsp;
+
+
                                                 <a title="Search Google"
                                                    href="https://google.com/search?q={{ f.sha256 }}"
                                                    target="_blank"><span
