--- a/app/static/views/yara_rule/yara_rules.html
+++ b/app/static/views/yara_rule/yara_rules.html
@@ -431,18 +431,19 @@
                                 <ul class="list-group">
                                     <li class="list-group-item justify-content-between"
                                         ng-repeat="f in yara_rule.files | orderBy:'-last_revision_date'">
+
                                         <a title="{{ file_store_path.value }}/{{ entity_mapping.SIGNATURE }}/{{ f.entity_id }}/{{ f.filename }}"
+
                                            href="ThreatKB/files/{{ f.entity_type }}/{{ f.entity_id }}/{{ f.id }}">{{ f.filename }}</a>&nbsp;<span
                                             ng-if="f.date_modified"
                                             style="font-size: 0.8em;">({{ pretty_date(f.date_modified) }} by {{ f.user.email }})</span>
                                         <div class="pull-right">
 
-						<a title="Delete File" ng-confirm-click="Are you sure you want to delete this attached file?"
-			     
-			     	               	    href="ThreatKB/files/delete/{{ f.entity_type }}/{{ f.entity_id }}/{{ f.id }}?path={{ file_store_path.value }}/{{ entity_mapping.SIGNATURE }}/{{ f.entity_id }}/{{ f.filename }}">
+	     <button class="btn btn-danger btn-xs" style="margin-bottom: 5px" confirmed-click="filesDelete(f.id)" ng-confirm-click="Are you sure you want to inactivate this signature?">
 
-                                                    <span class="glyphicon glyphicon-remove-circle"></span>
-   					        </a>
+						    <span class="glyphicon glyphicon-remove-circle"></span>
+					    </button>
+
 						&nbsp;
     
 						    <a title="Search VirusTotal"
