--- a/app/static/views/yara_rule/yara_rules.html
+++ b/app/static/views/yara_rule/yara_rules.html
@@ -439,7 +439,7 @@
                                             style="font-size: 0.8em;">({{ pretty_date(f.date_modified) }} by {{ f.user.email }})</span>
                                         <div class="pull-right">
 
-	     <button class="btn btn-danger btn-xs" style="margin-bottom: 5px" confirmed-click="filesDelete(f.id)" ng-confirm-click="Are you sure you want to inactivate this signature?">
+	     <button class="btn btn-danger btn-xs" style="margin-bottom: 5px" confirmed-click="filesDelete(f.id)" ng-confirm-click="Are you sure you want to delete this file?">
 
 						    <span class="glyphicon glyphicon-remove-circle"></span>
 					    </button>
